[tool.poetry]
name = "EmailSpammer"
version = "1.0"
description = "Simple python email spammer. Made for educational purposes only."
authors = ["AidanDevs"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
python-delay = "^0.4"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"